View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0029448 | Open CASCADE | OCCT:Modeling Data | public | 2018-01-25 11:58 | 2018-06-29 21:19 |
Reporter | msv | Assigned To | apn | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.2.0 | ||||
Target Version | 7.3.0 | Fixed in Version | 7.3.0 | ||
Summary | 0029448: The method Extrema_FuncExtCS::GetStateNumber mixes up parameter on curve with parameter U on surface | ||||
Description | The method Extrema_FuncExtCS::GetStateNumber mixes up parameter on curve with parameter U on surface:Standard_Real aU = myPoint1(i).Parameter(); if( (myU - aU) * (myU - aU) <= tol2d ) break; Here myU is the parameter U of the solution on surface, and myPoint1 contains parameters of solutions on curve. The code must be the following: Standard_Real aT = myPoint1(i).Parameter(); if( (myt - aT) * (myt - aT) <= tol2d ) break; | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR29448 has been created by msv. SHA-1: b32b729ee32a6fa534f680ec8e5b7b59b93e30ad Detailed log of new commits: Author: msv Date: Thu Jan 25 12:00:46 2018 +0300 0029448: The method Extrema_FuncExtCS::GetStateNumber mixes up parameter on curve with parameter U on surface The code has been corrected to eliminate the mess. |
|
Dear Igor, please review the branch. Tests are done in CR29448-master-msv without regressions/improvements. |
|
Seems to be valid |
|
Combination - OCCT branch : CR29448 SHA - b32b729ee32a6fa534f680ec8e5b7b59b93e30ad Products branch : master SHA - d89a467c378e57aa29e553b9f117db99086ddb1b was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian70-64: OCCT Total CPU difference: 18498.499999999694 / 18449.779999999675 [+0.26%] Products Total CPU difference: 7496.530000000015 / 7488.530000000009 [+0.11%] Windows-64-VC10: OCCT Total CPU difference: 18008.037835398693 / 17999.364179798602 [+0.05%] Products Total CPU difference: 8025.5650455999685 / 8032.819092099977 [-0.09%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR29448 has been deleted by kgv. SHA-1: b32b729ee32a6fa534f680ec8e5b7b59b93e30ad |
occt: master ca9faa28 2018-01-25 09:00:46 Committer: apn Details Diff |
0029448: The method Extrema_FuncExtCS::GetStateNumber mixes up parameter on curve with parameter U on surface The code has been corrected to eliminate the mess. |
Affected Issues 0029448 |
|
mod - src/Extrema/Extrema_FuncExtCS.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2018-01-25 11:58 | msv | New Issue | |
2018-01-25 11:58 | msv | Assigned To | => msv |
2018-01-25 12:01 | git | Note Added: 0073591 | |
2018-01-25 15:46 | msv | Status | new => assigned |
2018-01-25 15:47 | msv | Note Added: 0073595 | |
2018-01-25 15:47 | msv | Assigned To | msv => ifv |
2018-01-25 15:47 | msv | Status | assigned => resolved |
2018-01-25 15:47 | msv | Steps to Reproduce Updated | |
2018-01-26 08:54 | ifv | Note Added: 0073599 | |
2018-01-26 08:54 | ifv | Assigned To | ifv => bugmaster |
2018-01-26 08:54 | ifv | Status | resolved => reviewed |
2018-01-26 09:56 | apn | Test case number | => Not needed |
2018-01-26 09:56 | apn | Note Added: 0073602 | |
2018-01-26 09:56 | apn | Status | reviewed => tested |
2018-01-28 12:18 | apn | Changeset attached | => occt master ca9faa28 |
2018-01-28 12:18 | apn | Assigned To | bugmaster => apn |
2018-01-28 12:18 | apn | Status | tested => verified |
2018-01-28 12:18 | apn | Resolution | open => fixed |
2018-02-05 11:39 | git | Note Added: 0073782 | |
2018-02-20 12:58 |
|
Target Version | 7.4.0 => 7.3.0 |
2018-06-29 21:15 |
|
Fixed in Version | => 7.3.0 |
2018-06-29 21:19 |
|
Status | verified => closed |