0029448: The method Extrema_FuncExtCS::GetStateNumber mixes up parameter on curve with parameter U on surface

The code has been corrected to eliminate the mess.